cmake_minimum_required(VERSION 3.21)
project(Controlv3)

set(CMAKE_CXX_STANDARD 20)

add_executable(Controlv3 main.cpp getSome.h Student.h Junior.cpp Junior.h Senior.cpp Senior.h TableStudent.cpp TableStudent.h Tablegroup.cpp Tablegroup.h Application.cpp Application.h vector.cpp vector.h MyRealization.cpp MyRealization.h Menu.h Menu.cpp)
